# SuperAutoLex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  coverage.yaml
data/: effects.csv  t1.csv  t1_first_words.csv  t2.csv  t2_first_words.csv  t3.csv  t3_first_words.csv  t4.csv  t4_first_words.csv  t5.csv  t5_first_words.csv  t6.csv  t6_first_words.csv  trigger.csv
src/: effect.rs  lib.rs  main.rs  scanner.rs  token.rs  tokenize.rs  trigger.rs
src/token/: actions.rs  attribute.rs  logic.rs  mod.rs  numeric.rs  position.rs  target.rs  trigger.rs  types.rs
