[lib]
name = "saplex"
path = "src/lib.rs"

[package]
name = "saplex"
version = "0.1.0"
authors = ["Keisuke K. Oshima <koshima789@gmail.com>"]
description = "A library for parsing Super Auto Pets effects."
repository = "https://github.com/koisland/SuperAutoLex"
readme = "README.md"
edition = "2021"
license = "MIT"

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
anyhow = "1.0.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
